Fixed vertical alignment of content-more

--- a/_sass/fragments/content-more.scss
+++ b/_sass/fragments/content-more.scss
@@ -10,7 +10,7 @@
   > span {
     height: $icon-size;
     display: inline-block;
-    vertical-align: baseline;
+    vertical-align: middle;
     > hr {
       margin: $icon-size / 2 0 0;
       border-top: 1px solid $grey-colour;
